<?xml version="1.0"?>
<package format="3">
  <name>ddr_icrekf</name>
  <version>0.1.0</version>
  <description>ICR-based EKF state estimator migrated from DDR-opt.</description>

  <maintainer email="wu@example.com">Wu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
